Use regular form for formation #2

--- a/config/locales/formation.fr.yml
+++ b/config/locales/formation.fr.yml
@@ -16,6 +16,7 @@ fr:
         address:          L'adresse
         zipcode:          Le code postal
         city:             La ville
+        schedules:        La date
       formation/participants:
         organization: La structure
         firstname: Le prénom
