Export csv participants #6

--- a/config/locales/subscription.yml
+++ b/config/locales/subscription.yml
@@ -11,3 +11,4 @@ fr:
         lastname: Le nom du participant
         firstname: Le prénom du participant
         email: L'email du participant
+        phone: Le téléphone du participant
