--- a/config/locales/setting.fr.yml
+++ b/config/locales/setting.fr.yml
@@ -3,12 +3,16 @@ fr:
     attributes:
       setting:
         project_name:   Le nom du pôle
+        baseline:       La phrase d'accroche
+        baseline_pre:   L'entête de la phrase d'accroche
         logo:           Le logo
 
   helpers:
     label:
       setting:
         project_name:   Nom du pôle
+        baseline:       Phrase d'accroche
+        baseline_pre:   Entête phrase d'accroche
         logo:           Logo
         admin_emails:   Emails admin
     submit:
