--- a/config/locales/generic.fr.yml
+++ b/config/locales/generic.fr.yml
@@ -209,3 +209,20 @@ fr:
     zero: "Complet"
     one: "%{count} place restante"
     other: "%{count} places restantes"
+
+  # Kaminari pagination --------------------
+  helpers:
+    page_entries_info:
+      more_pages:
+        display_entries: "%{entry_name}  <b>%{first} - %{last}</b> sur <b>%{total}</b> au total"
+      one_page:
+        display_entries:
+          one: "<b>%{count}</b> %{entry_name}"
+          other: "<b>tous les %{count}</b> %{entry_name}"
+  views:
+    pagination:
+      first: "&laquo; Premier"
+      last: Dernier &raquo;
+      next: Suivant
+      previous: "Précédent"
+      truncate: "&hellip;"
