Add enabled, closes #4

--- a/config/locales/activity.fr.yml
+++ b/config/locales/activity.fr.yml
@@ -10,6 +10,7 @@ fr:
       activity:
         title:          Titre
         description:    Description
+        enabled: Visibilité
     submit:
       activity:
         create: "Créer l'action"
