--- a/config/locales/activity.fr.yml
+++ b/config/locales/activity.fr.yml
@@ -1,5 +1,9 @@
 fr:
   activerecord:
+    models:
+      activity:
+        one: Actions
+        other: Action
     attributes:
       activity:
         title:          Le titre
