--- a/config/locales/theme.fr.yml
+++ b/config/locales/theme.fr.yml
@@ -1,5 +1,9 @@
 fr:
   activerecord:
+    models:
+      theme:
+        one: Thème
+        other: Thèmes
     attributes:
       theme:
         title:          Le titre
