Fix draggable position

--- a/config/locales/theme.fr.yml
+++ b/config/locales/theme.fr.yml
@@ -9,6 +9,8 @@ fr:
         title:          Le titre
         baseline:       Le sous-titre
         description:    La description
+      theme/menu_blocks/menu_items:
+        url: L'url du lien
 
   helpers:
     label:
