Add few improvments

--- a/config/locales/main_page.fr.yml
+++ b/config/locales/main_page.fr.yml
@@ -21,3 +21,5 @@ fr:
       main_page:
         create: "Créer la page"
         update: "Mettre à jour la page"
+  attributes:
+    parent_page_id: Page parente
