--- a/config/locales/generic.fr.yml
+++ b/config/locales/generic.fr.yml
@@ -232,3 +232,6 @@ fr:
       next: Suivant
       previous: "Précédent"
       truncate: "&hellip;"
+
+  attributes:
+    short_description: Description courte
