Style events, basic_page, search

--- a/config/locales/activity.fr.yml
+++ b/config/locales/activity.fr.yml
@@ -2,8 +2,8 @@ fr:
   activerecord:
     models:
       activity:
-        one: Actions
-        other: Action
+        one: Action
+        other: Actions
     attributes:
       activity:
         title:          Le titre
